# stream_motion_interface

./: .gitignore  GIT_SETUP.md  README.md  SESSION_NOTES.md  pyproject.toml  requirements.txt
examples/: basic_cartesian_move.py  basic_joint_move.py  basic_joint_move_6axis.py  move_to_home.py  shapes_cartesian.py  status_monitor.py
roboguide/: README.md  STREAM_MOTION_TEST.ls
stream_motion/: __init__.py  client.py  constants.py  packets.py  trajectory.py
tests/: test_packets.py  test_trajectory.py
